<resources>
    <string name="app_name">DiscoverEats</string>
    <string name="login_text">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_button">Log In</string>
    <string name="create_button">Create</string>
    <string name="confirm_hint">confirm password</string>
    <string name="home_nav_button">Home</string>
    <string name="profile_nav_button">Profile</string>
    <string name="yelp_link">View on Yelp</string>
    <string name="add_name_hint">Click to add name</string>
    <string name="log_out_button">Log Out</string>
    <string name="filter_menu_description">Filter</string>

    <string name="location_hint">Enter a city or postal code</string>
    <string name="or">or</string>
    <string name="location_button">Use current location</string>
    <string name="location">Location</string>
    <string name="apply_button">Apply</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="camera_pic">Open Camera</string>
    <string name="gallery_pic">Choose from Gallery</string>
    <string name="pickup">Pickup</string>
    <string name="delivery">Delivery</string>
    <string name="reservations">Takes Reservations</string>

    <string name="delete">Delete</string>
    <string name="completed">Mark Completed</string>
    <string name="cancel">Cancel</string>

    <string name="search_hint">Search for users</string>

    <string-array name="price_array">
        <item></item>
        <item>$</item>
        <item>$$</item>
        <item>$$$</item>
        <item>$$$$</item>
    </string-array>
</resources>