<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FilterActivity">

        <ImageView
            android:id="@+id/ivCancel"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="12dp"
            android:src="@drawable/x_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="36dp"
            android:layout_toStartOf="@id/ivCancel"
            android:layout_alignParentTop="true"
            android:layout_above="@id/btnApply"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/location_hint" />

            <TextView
                android:id="@+id/tvOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/or"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnUseLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/location_button" />

            <TextView
                android:id="@+id/tvCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Category"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <SearchView
                android:id="@+id/categorySearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:iconifiedByDefault="false"
                android:queryHint="Start typing to search categories" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategories"
                android:layout_weight="1"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Price"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/priceFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:gravity="center_horizontal"
                    android:text="to" />

                <Spinner
                    android:id="@+id/priceTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Maximum Distance"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/etDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="Enter maximum distance in miles" />

        </LinearLayout>

        <Button
            android:id="@+id/btnApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="24dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/apply_button"
            android:textColor="@color/white" />

    </RelativeLayout>

</layout>