<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">


        <LinearLayout
            android:id="@+id/llBottomImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivBottomL"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/login_images_5" />

            <ImageView
                android:id="@+id/ivBottomMid"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/login_images_2" />

            <ImageView
                android:id="@+id/ivBottomR"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/login_images_1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTopImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivTopL"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_weight="0.333"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/login_images_6" />

            <ImageView
                android:id="@+id/ivTopMid"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_weight="0.333"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/login_images_3" />

            <ImageView
                android:id="@+id/ivTopR"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_weight="0.333"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/login_images_4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/llBottomImages"
            android:layout_below="@id/llTopImages"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/login_text"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/verticalLine"
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="0"
                    android:background="#FF6F00" />

                <TextView
                    android:id="@+id/tvCreateAcc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/create_account"
                    android:textColor="@color/unselected_text"
                    android:textSize="20sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/username_hint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/password_hint" />

            <EditText
                android:id="@+id/etConfirmPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/confirm_hint"
                android:inputType="textPersonName"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:fontFamily="sans-serif-medium"
                android:shadowColor="#FB8C00"
                android:text="@string/login_button"
                android:textColor="#FFFFFF" />

<!--            <LinearLayout-->
<!--                android:id="@+id/llSeparator"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="24dp"-->
<!--                android:orientation="horizontal">-->

<!--                <View-->
<!--                    android:id="@+id/orLine1"-->
<!--                    android:layout_width="100dp"-->
<!--                    android:layout_height="1dp"-->
<!--                    android:layout_gravity="center_vertical"-->
<!--                    android:background="@color/unselected_text" />-->

<!--                <TextView-->
<!--                    android:id="@+id/tvOr"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center_horizontal"-->
<!--                    android:layout_marginStart="8dp"-->
<!--                    android:layout_marginEnd="8dp"-->
<!--                    android:gravity="center_horizontal"-->
<!--                    android:text="or" />-->

<!--                <View-->
<!--                    android:id="@+id/orLine2"-->
<!--                    android:layout_width="100dp"-->
<!--                    android:layout_height="1dp"-->
<!--                    android:layout_gravity="center_vertical"-->
<!--                    android:background="@color/unselected_text" />-->

<!--            </LinearLayout>-->

<!--            <com.facebook.login.widget.LoginButton-->
<!--                android:id="@+id/login_button"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:layout_marginTop="24dp"-->
<!--                android:layout_marginBottom="12dp" />-->

        </LinearLayout>

    </RelativeLayout>
</layout>