<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailsActivity">

        <LinearLayout
            android:id="@+id/llTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvName"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tagDelivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:background="@drawable/tag_background"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="@string/delivery"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tagReservations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:background="@drawable/tag_background"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="@string/reservations"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tagPickup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:background="@drawable/tag_background"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="@string/pickup"
                android:textColor="@color/white" />


        </LinearLayout>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:textColor="@color/black"
            android:textSize="40sp"
            tools:text="Symbowl" />

        <HorizontalScrollView
            android:id="@+id/svPhotos"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_above="@id/llInfo"
            android:layout_below="@id/llTags"
            android:layout_margin="8dp">

            <LinearLayout
                android:id="@+id/llPhotos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivImage1"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="8dp"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/ivImage2"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="8dp"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/ivImage3"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="8dp"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

            </LinearLayout>

        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/llInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/llRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivRating"
                        android:layout_width="300dp"
                        android:layout_height="32dp"
                        android:src="@drawable/stars_small_0" />

                    <TextView
                        android:id="@+id/tvOutOf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        tools:text="out of 43 reviews" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/price_circle"
                    android:gravity="center"
                    android:minWidth="34dp"
                    android:padding="6dp"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    tools:text="$$$" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivCategoryIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/fork_icon"
                    android:tint="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/tvCategories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="24sp"
                    tools:text="Mediterranean, Greek" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivLocationIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/location_icon"
                    android:tint="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:textSize="24sp"
                    tools:text="Short North" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="22sp"
                    tools:text="Open Now" />

                <TextView
                    android:id="@+id/tvDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/tag_background"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:padding="4dp"
                    tools:text="6 mi" />

            </LinearLayout>

            <Button
                android:id="@+id/btnYelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yelp_link" />

        </LinearLayout>

    </RelativeLayout>

</layout>